Make Political page

--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@ body {
 }
 .container {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   flex-wrap: wrap;
   margin-top: 20px;
 }
