--- a/news_weather/weather.css
+++ b/news_weather/weather.css
@@ -1,3 +1,9 @@
+body {
+  background-color: #004c56;
+  color: azure;
+  padding-bottom: 10px;
+}
+
 nav ul {
   background-color: #222830;
   font-weight: bolder;
@@ -11,6 +17,40 @@ nav ul a {
 nav ul a:hover {
   color: #b0b5b5 !important;
 }
-nav ul a.active{
-    color:#ecbd8b!important;
+nav ul a.active {
+  color: #ecbd8b !important;
+}
+
+.form-control {
+  width: 50%;
+}
+.forecast {
+  margin: 20px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.forecastCard {
+  width: fit-content;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: 20px;
+  margin-top: 0;
+}
+.forecastItem{
+  margin: 10px;
+}
+.list-group-item{
+    background-color: #222830;
+height: 80px;
+border:2px dashed #f4841a;
+}
+
+.spinner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80%;
 }
