--- a/news_sport/sport.css
+++ b/news_sport/sport.css
@@ -30,6 +30,7 @@ nav ul a.active {
 .news-content-visible{
   display: flex;
   justify-content: space-around;
+  
 }
 .content {
   background-color: #222830;
@@ -53,6 +54,7 @@ img {
   border-radius: 15px;
   width: 530px;
   height: 305px;
+  margin: 10px;
 }
 .title{
   font-weight: bolder;
