--- a/mediaquerries.css
+++ b/mediaquerries.css
@@ -11,3 +11,18 @@
     margin-bottom: 15px;
   }
 }
+
+@media screen and (max-width: 890px) {
+  .news-content-visible{
+    flex-wrap: wrap;
+  }
+  .news-content-visible img{
+    zoom: 0.7;
+  }
+}
+
+@media screen and (max-width: 470px) {
+    .news-content-visible img{
+    zoom: 0.4;
+  }
+}
