--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body {
   background-color: #004c56;
-  color:azure;
+  color: azure;
 }
 
 .gif-container {
@@ -17,7 +17,7 @@ body {
   flex-wrap: wrap;
   margin-top: 20px;
 }
-.welcome{
+.welcome {
   width: 40%;
   height: fit-content;
   cursor: none;
@@ -26,13 +26,23 @@ body {
 nav ul {
   background-color: #222830;
   font-weight: bolder;
+  justify-content: space-between;
+}
+nav ul span{
+  display: flex;
+  align-items: center;
+  font-size: 17px;
 }
 nav ul a {
   color: #f4841a !important;
 }
-nav ul a.active{
-    color:#ecbd8b!important;
+nav ul a .active {
+  color: #ecbd8b !important;
 }
 nav ul a:hover {
   color: #b0b5b5 !important;
+}
+.greenfoot{
+  margin: 10px;
+  margin-left: 20px;
 }
