--- a/news_politics/politics.css
+++ b/news_politics/politics.css
@@ -7,6 +7,12 @@ body {
 nav ul {
   background-color: #222830;
   font-weight: bolder;
+  justify-content: space-between;
+}
+nav ul span{
+  display: flex;
+  align-items: center;
+  font-size: 17px;
 }
 nav ul a {
   color: #f4841a !important;
@@ -16,6 +22,10 @@ nav ul a.active {
 }
 nav ul a:hover {
   color: #b0b5b5 !important;
+}
+.greenfoot{
+  margin: 10px;
+  margin-left: 20px;
 }
 
 .news-item {
@@ -49,7 +59,7 @@ nav ul a:hover {
   justify-content: flex-end;
   height: 15%;
 }
-img {
+.img {
   border-radius: 15px;
   width: 530px;
   height: 305px;
